--- a/menu.html
+++ b/menu.html
@@ -9,30 +9,32 @@
 
 <body>
 
-	<nav>
-		<ul>
+	<div class="container">
 
-			<li>
+		<nav>
+			<ul>
 
-				<a href="index.html">Home</a>
+				<li>
+
+					<a href="index.html">Home</a>
 		
-			</li>
+				</li>	
 		
-			<li>
+				<li>
 
-				<a href="about.html">About</a>
+					<a href="about.html">About</a>
 
-			</li>
+				</li>
 
-			<li>
+				<li>
 
-				<a href="menu.html">Menu</a>
+					<a href="menu.html">Menu</a>
 			
-			</li>	
+				</li>	
 
-		</ul>
-	</nav>
-	
+			</ul>
+		</nav>
+	</div>
 
 </body>
 </html>
