--- a/index.html
+++ b/index.html
@@ -9,32 +9,37 @@
 
 <body>
 
-	<nav>
-		<ul>
+	<div class="container">
 
-			<li>
+		<nav>
+			<ul>
 
-				<a href="index.html">Home</a>
+				<li>
+
+					<a href="index.html">Home</a>
 		
-			</li>
+				</li>
 		
-			<li>
+				<li>
 
-				<a href="about.html">About</a>
+					<a href="about.html">About</a>
 
-			</li>
+				</li>
 
-			<li>
+				<li>
 
-				<a href="menu.html">Menu</a>
+					<a href="menu.html">Menu</a>
 			
-			</li>	
+				</li>	
 
-		</ul>
-	</nav>	
+			</ul>
+		</nav>	
 
-	<div id="pic">
-		<img src="images/home-pg.jpg"/>
+		<img src="images/home-pg.jpg" style="width:960px;" style="height:500px;"/>
+	
+	</div>
+
+	
 	</div>
 </body>
 </html>
