added content to the menu page

--- a/about.html
+++ b/about.html
@@ -4,9 +4,7 @@
 <head>
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-	
- <style>
-
+	<style type="text/css">
 
  	#gallery {
  		float: left;
@@ -17,9 +15,20 @@
 
  	#about{
  		float: right;
- 		border: 1px solid;
- 		width:730px;
+ 		width:731px;
  		height:1000px;
+ 		margin-top: 3px;
+ 	}
+
+ 	#aboutContent{
+
+ 		position: relative;
+ 		
+ 		margin-top:3px;
+ 		
+ 		width:730;
+ 		height:200px;
+
  	}
 
  	figure {
@@ -30,6 +39,37 @@
  		margin:0px;
  		padding:3px;
  	}
+
+p {
+	padding-top: 15px;
+	padding-left: 25px;
+	font-family: Arial;
+	font-size: 13px;
+	line-height: 25px;
+	width: 320px;
+}
+
+#contentTwo{
+
+	float: right;
+	width:340px;
+	margin-top:-215px;
+	padding-right: 30px;
+}
+
+#contentThree{
+
+	padding-left: 25px;
+}
+
+#follow{
+
+	font-size: 13px;
+	line-height: 25px;
+	width:630px;
+
+}
+
 
  </style>
 
@@ -73,9 +113,40 @@
 		<figure> <img src="images/about-pic2.jpg" style= "width:200px; height: 200px "/></figure>
 		<figure> <img src="images/about-pic3.jpg" style= "width:200px; height: 200px "/></figure>
 
+	</div>
+
+	<div id="about"> 
+
+		<img src="images/about-main.jpg"/>
+
+		<div id="aboutContent">
+
+			<p> Black Kettle is a coffee/ tea house that servers traditional tea foods with a twists. We took everthing you love from traditional tea houses and gave it a little face life. Here you will be able to find all the teas and coffee you love but with some added ingredients. We strive to make this a unique exprience for eveyone who walk through our doors.
+		    </p>
+
+		</div>    
+			
+		<div id="contentTwo">
+
+			<p>Not only is our teas and coffee one hundred percent free trade but we also use all natural ingredients for our food and local food markets for the freshest produce we can find. So come in sit down and join us for a delicious cup tea (or joe)
+			</p>
+
+		</div>
+
+		<div id="contentThree">
+
+
+			<h4>Follow us!</h4>
+
+			<div id="follow"> Always know whats going on at Black Kettle by following us on instagram and twitter! New items are posted on the reg, so never miss a chance to try something new!</div>
+
+			
+		</div>	
+
+	   </div>	
 
 	</div>
-	<div id="about"> about info goes here</div>
 
+	
 </body>
 </html>
