added menu page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 
  	#gallery {
  		float: left;
+ 		margin:0;
  		
  		
  		height:1000px;
@@ -68,7 +69,10 @@ p {
 	line-height: 25px;
 	width:630px;
 
+
 }
+
+
 
 
  </style>
@@ -131,17 +135,27 @@ p {
 			<p>Not only is our teas and coffee one hundred percent free trade but we also use all natural ingredients for our food and local food markets for the freshest produce we can find. So come in sit down and join us for a delicious cup tea (or joe)
 			</p>
 
-		</div>
+	  </div>
 
-		<div id="contentThree">
+	<div id="contentThree">
 
 
 			<h4>Follow us!</h4>
 
-			<div id="follow"> Always know whats going on at Black Kettle by following us on instagram and twitter! New items are posted on the reg, so never miss a chance to try something new!</div>
+		<div id="follow"> Always know whats going on at Black Kettle by following us on instagram and twitter! New items are posted on the reg, so never miss a chance to try something new!</div>
 
 			
-		</div>	
+				<a href="https://www.instagram.com"target="blank">
+				 <img src="images/Instagram-Logo.jpg" style=" float:left;width:30px;height:30px; margin-top:50px; padding-right:15px;" />
+		  		 </a>
+
+		   		<a href="https://www.twitter.com" target="blank">
+				 <img src="images/twitter.jpg" style=" float:left;width:30px;height:30px; margin-top:50px;" />
+		   		</a>
+		  
+
+			
+		
 
 	   </div>	
 
