--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,38 @@
 <head>
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+	<style type="text/css">
+
+	#tea{
+		padding-left: 40px;
+		padding-top: 10px;
+		float:left;
+		width:450px;
+		line-height: 23px;
+
+	}
+
+	#coffee{
+		float:right;
+		padding-right:70px;
+		width:390px;
+		padding-top: 20px;
+		line-height: 23px;
+	}
+
+	
+	ul{
+		list-style: none;
+	}	
+
+	h3 {
+
+		padding-left: 40px;
+	}
+
+
+	</style>
+
 </head>
 
 
@@ -35,6 +67,80 @@
 			</ul>
 		</nav>
 	</div>
+
+	<div>
+		<img src="images/menu.jpg" style="margin: 0px; width:960px; height:300px; "/>
+	</div>
+
+	<div id="tea">
+		
+		<h3>Teas</h3>
+		<ul>
+
+			<li>White
+				<ul>
+					<li>Raspberry Pineapple Luau White l 5</li>
+					<li>Very Berry White Tea l 3</li>
+					<li>Jasmine Silver Needle White Tea l 5</li>
+					<li>Earl Grey White Tea l 4</li>
+				</ul>	
+			</li>
+
+			<li>Green
+				<ul>
+					<li>Blackberry Mojito Green Tea l 3</li>
+					<li>Matcha Japanese Green Tea l 4</li>
+					<li>Sakura Allure Green Tea l 3</li>
+					<li>Emperor’s Clouds and Mist Green Tea l 4</li>
+				</ul>
+			</li>		
+
+			<li>Black
+				<ul>
+					<li>Sangria Punch Black Tea l 6 </li>
+					<li>Capital of Heaven Keemun Black Tea l 4</li>
+					<li>Earl Grey Black Tea l 4</li>
+					<li>Darjeeling de Triomphe Black Tea l 5</li>
+				</ul>
+			</li>	
+
+		</ul>
+</div>
+
+<div id="coffee">
+
+	<h3>Coffee</h3>
+		<ul>
+			
+			<li>Machiatto
+				<ul>
+					<li>Rasberry Machiatto l 5</li>
+					<li>White Chocolate Raspberry Machiatto l 4 </li>
+					<li>Chocolate Hazlenut Machiatto l 4</li>
+					<li>Carmel Machiatto l 3</li>
+				</ul>	
+			</li>
+
+				<li>Latte
+				<ul>
+					<li>Vanilla Latte l 4</li>
+					<li>Hazelnut Latte l 4</li>
+					<li>White Chocolate Amaretto Latte l 3</li>
+					<li>Butter Rum Latte l 6</li>
+				</ul>	
+			</li>
+
+
+				<li>Latte
+				<ul>
+					<li>Cappuccino l 3</li>
+					<li>Hazelnut Cappuccino l 6</li>
+					<li>Blackberry Cappuccino l 4</li>
+					<li>Vanilla Capuccino l 6</li>
+				</ul>	
+			</li>
+
+		</ul>	
 
 </body>
 </html>
